--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
 			<a href="#" class="services__link">Read more</a>
 		</div>
 	</div>
+
+	<footer class="footer row">
+		<div class="footer__feed col-lg-4 col-md-4">
+			
+		</div>
+	</footer>
 </div>
 <script src="script/script.js"></script>
 </body>
