--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/flexboxgrid.css"><!-- 
 	<link rel="stylesheet" href="css/normalize.css"> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -22,7 +23,6 @@
 				<button type="submit" class="search__submit">GO</button>
 		</form>
 	</header>
-
 	<nav class="nav row">
 		<ul class="nav__list col-md-12">
 			<li class="list__item"><a href="#" class="list__item_link">home</a></li>
@@ -111,12 +111,15 @@
 		</div>
 	</div>	
 
-	<div class="content row">
+		<div class="content row">
 		<div class="content__about col-lg-6 col-md-12">
-			<h1 class="about__title">About whitesquad</h1>
+			<div class="about__title">
+				<h1 class="title__name">ABOUT WHITESQUAD</h1>
+				<div class="title__line"></div>
+			</div>
 			<div class="about__text">
 				<div class="text__pic">
-					<img src="img/5.jpg" alt="" class="text__pic_img">
+					<img src="img/2.jpg" alt="" class="text__pic_img">
 				</div>
 				<div class="text__article">
 					<p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit eos fugit quisquam magni eum deleniti dolorum ea voluptates, reiciendis delectus vitae illo cupiditate vero dolor laudantium nihil doloribus et saepe eligendi totam, aspernatur eius. Esse, omnis non ea fugiat alias repudiandae corporis, magnam tenetur aut soluta sint, nulla aperiam distinctio blanditiis autem quas temporibus quibusdam eum!</p>
@@ -124,11 +127,17 @@
 				</div>
 			</div>
 		</div>
+
+
+
 		<div class="content__about col-lg-6 col-md-12">
-			<h1 class="about__title">a word from OUR ceo</h1>
+			<div class="about__title">
+				<h1 class="title__name">a word from OUR ceo</h1>
+				<div class="title__line"></div>
+			</div>
 			<div class="about__text">
 				<div class="text__pic">
-					<img src="img/5.jpg" alt="" class="text__pic_img">
+					<img src="img/1.jpg" alt="" class="text__pic_img">
 				</div>
 				<div class="text__article">
 					<p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit eos fugit quisquam magni eum deleniti dolorum ea voluptates, reiciendis delectus vitae illo cupiditate vero dolor laudantium nihil doloribus et saepe eligendi totam, aspernatur eius. Esse, omnis non ea fugiat alias repudiandae corporis, magnam tenetur aut soluta sint, nulla aperiam distinctio blanditiis autem quas temporibus quibusdam eum!</p>
@@ -137,7 +146,11 @@
 			</div>
 		</div>
 		
-		<div class="content__services col-lg-4 col-md-12">
+<!-- 		<div class="content__services col-lg-4 col-md-12">
+			<div class="about__title">
+				<h1 class="title__name">ABOUT WHITESQUAD</h1>
+				<div class="title__line"></div>
+			</div>
 			<h1 class="services__title">Services</h1>
 			<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores optio nam iure quibusdam, quaerat excepturi ipsam quisquam beatae ullam, suscipit obcaecati. Omnis unde, inventore amet rem, magnam possimus perferendis accusamus ea quos at, id dolores exercitationem pariatur similique incidunt eum asperiores voluptas repudiandae maxime, doloremque molestias ab beatae eveniet. Totam!
 			</p>
@@ -180,6 +193,68 @@
 			<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores optio nam iure quibusdam, quaerat excepturi ipsam quisquam beatae ullam, suscipit obcaecati. Omnis unde, inventore amet rem, magnam possimus perferendis accusamus ea quos at, id dolores exercitationem pariatur similique incidunt eum asperiores voluptas repudiandae maxime, doloremque molestias ab beatae eveniet. Totam!
 			</p>
 			<a href="#" class="services__link">Read more</a>
+		</div> -->
+	</div>
+
+	<div class="content__additional row">
+		<div class="content__services col-lg-4 col-md-12">
+			<div class="about__title">
+				<h1 class="title__name">services</h1>
+				<div class="title__line"></div>
+			</div>
+			<div class="text__article">
+					<p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit eos fugit quisquam magni eum deleniti dolorum ea voluptates, reiciendis delectus vitae illo cupiditate vero dolor laudantium nihil doloribus et saepe eligendi totam, aspernatur eius. Esse, omnis non ea fugiat alias repudiandae corporis, magnam tenetur aut soluta sint, nulla aperiam distinctio blanditiis autem quas temporibus quibusdam eum!</p>
+					<a href="#" class="article__link">Read more</a>
+			</div>
+		</div>
+		
+		<div class="content__teams col-lg-4 col-md-12">
+			<div class="about__title teams__title">
+				<h1 class="title__name">Our team</h1>
+				<div class="title__line"></div>
+			</div>
+			<div class="teams__about">
+				<div class="teams__description">
+				<div class="description__picture">
+					<img src="img/4.jpg" alt="" class="description__picture_img">
+				</div>
+				<div class="description__text">
+					<h4 class="description__text_title">Lorem ipsum</h4>
+					<p class="description__text_about-team">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum necessitatibus odit consequuntur cupiditate?</p>
+				</div>
+				</div>
+				
+				<div class="teams__description">
+				<div class="description__picture">
+					<img src="img/4.jpg" alt="" class="description__picture_img">
+				</div>
+				<div class="description__text">
+					<h4 class="description__text_title">Lorem ipsum</h4>
+					<p class="description__text_about-team">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum necessitatibus odit consequuntur cupiditate?</p>
+				</div>
+			</div>
+
+			<div class="teams__description">
+				<div class="description__picture">
+					<img src="img/4.jpg" alt="" class="description__picture_img">
+				</div>
+				<div class="description__text">
+					<h4 class="description__text_title">Lorem ipsum</h4>
+					<p class="description__text_about-team">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum necessitatibus odit consequuntur cupiditate?</p>
+				</div>
+			</div>
+			</div>
+		</div>
+
+		<div class="content__services content__support col-lg-4 col-md-12">
+			<div class="about__title teams__title">
+				<h1 class="title__name">27/7/365 support</h1>
+				<div class="title__line"></div>
+			</div>
+			<div class="text__article">
+					<p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit eos fugit quisquam magni eum deleniti dolorum ea voluptates, reiciendis delectus vitae illo cupiditate vero dolor laudantium nihil doloribus et saepe eligendi totam, aspernatur eius. Esse, omnis non ea fugiat alias repudiandae corporis, magnam tenetur aut soluta sint, nulla aperiam distinctio blanditiis autem quas temporibus quibusdam eum!</p>
+					<a href="#" class="article__link">Read more</a>
+			</div>
 		</div>
 	</div>
 
