--- a/index.html
+++ b/index.html
@@ -145,59 +145,10 @@
 				</div>
 			</div>
 		</div>
-		
-<!-- 		<div class="content__services col-lg-4 col-md-12">
-			<div class="about__title">
-				<h1 class="title__name">ABOUT WHITESQUAD</h1>
-				<div class="title__line"></div>
-			</div>
-			<h1 class="services__title">Services</h1>
-			<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores optio nam iure quibusdam, quaerat excepturi ipsam quisquam beatae ullam, suscipit obcaecati. Omnis unde, inventore amet rem, magnam possimus perferendis accusamus ea quos at, id dolores exercitationem pariatur similique incidunt eum asperiores voluptas repudiandae maxime, doloremque molestias ab beatae eveniet. Totam!
-			</p>
-			<a href="#" class="services__link">Read more</a>
-		</div>
-
-		<div class="content__teams col-lg-4 col-md-12">
-			<h1 class="teams__title">Our teams</h1>
-			<div class="teams__description">
-				<div class="description__picture">
-					<img src="img/5.jpg" alt="" class="description__picture_img">
-				</div>
-				<div class="description__text">
-					<h4 class="text__title">Lorem ipsum</h4>
-					<p class="text__about-team">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum necessitatibus odit consequuntur cupiditate?</p>
-				</div>
-			</div>
-			<div class="teams__description">
-				<div class="description__picture">
-					<img src="img/5.jpg" alt="" class="description__picture_img">
-				</div>
-				<div class="description__text">
-					<h4 class="text__title">Lorem ipsum</h4>
-					<p class="text__about-team">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum necessitatibus odit consequuntur cupiditate?</p>
-				</div>
-			</div>
-			<div class="teams__description">
-				<div class="description__picture">
-					<img src="img/5.jpg" alt="" class="description__picture_img">
-				</div>
-				<div class="description__text">
-					<h4 class="text__title">Lorem ipsum</h4>
-					<p class="text__about-team">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum necessitatibus odit consequuntur cupiditate?</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="content__services content__support col-lg-4 col-md-12">
-			<h1 class="services__title support__title">24/7/365 support</h1>
-			<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores optio nam iure quibusdam, quaerat excepturi ipsam quisquam beatae ullam, suscipit obcaecati. Omnis unde, inventore amet rem, magnam possimus perferendis accusamus ea quos at, id dolores exercitationem pariatur similique incidunt eum asperiores voluptas repudiandae maxime, doloremque molestias ab beatae eveniet. Totam!
-			</p>
-			<a href="#" class="services__link">Read more</a>
-		</div> -->
 	</div>
 
 	<div class="content__additional row">
-		<div class="content__services col-lg-4 col-md-12">
+		<div class="content__services col-md-6 col-lg-4">
 			<div class="about__title">
 				<h1 class="title__name">services</h1>
 				<div class="title__line"></div>
@@ -208,7 +159,7 @@
 			</div>
 		</div>
 		
-		<div class="content__teams col-lg-4 col-md-12">
+		<div class="content__teams col-md-6 col-lg-4">
 			<div class="about__title teams__title">
 				<h1 class="title__name">Our team</h1>
 				<div class="title__line"></div>
@@ -246,7 +197,7 @@
 			</div>
 		</div>
 
-		<div class="content__services content__support col-lg-4 col-md-12">
+		<div class="content__services content__support col-md-6 col-lg-4">
 			<div class="about__title teams__title">
 				<h1 class="title__name">27/7/365 support</h1>
 				<div class="title__line"></div>
@@ -256,7 +207,54 @@
 					<a href="#" class="article__link">Read more</a>
 			</div>
 		</div>
+
+
+		<div class="clients__title col-md-6 col-lg-12">
+			<div class="about__title teams__title">
+				<h1 class="title__name">our clients</h1>
+				<div class="title__line"></div>
+			</div>
+			<div class="clients__companies">
+				<a href="#" class="companies__link">
+					<svg>
+						<use xlink:href="img/sprite2.svg#first-icon">
+					</svg>
+				</a>
+				<a href="#" class="companies__link">
+					<svg>
+						<use xlink:href="img/sprite2.svg#second-icon">
+					</svg>
+				</a>
+				<a href="#" class="companies__link">
+					<svg>
+						<use xlink:href="img/sprite2.svg#third-icon">
+					</svg>
+				</a>
+				<a href="#" class="companies__link">
+					<svg>
+						<use xlink:href="img/sprite2.svg#four-icon">
+					</svg>
+				</a>
+				<a href="#" class="companies__link">
+					<svg>
+						<use xlink:href="img/sprite2.svg#fifth-icon">
+					</svg>
+				</a>
+				<a href="#" class="companies__link">
+					<svg>
+						<use xlink:href="img/sprite2.svg#sixth-icon">
+					</svg>
+				</a>
+				<a href="#" class="companies__link">
+					<svg>
+						<use xlink:href="img/sprite2.svg#seven-icon">
+					</svg>
+				</a>
+			</div>
+		</div>
 	</div>
+
+
 
 	<footer class="footer row">
 		<div class="footer__feed col-lg-4 col-md-4">
