--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid">
@@ -258,7 +259,43 @@
 
 	<footer class="footer row">
 		<div class="footer__feed col-lg-4 col-md-4">
-			
+			 <div class="feed__title">
+			 	<h4 class="feed__title_news">twitter feed</h4>
+			 </div>
+			 <span class="feed__data">23 oct</span>
+			 <p class="feed__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur esse ex aliquam nisi officia, veniam voluptatum rerum illum dignissimos vel. Lorem ipsum.</p>
+		</div>
+		<div class="footer__nav col-md-2 col-lg-2">
+			<div class="feed__title">
+			 	<h4 class="feed__title_news">Sitemap</h4>
+			</div>
+			<div class="footer__nav_list">
+				<a href="#" class="nav__list_item">home</a>
+				<a href="#" class="nav__list_item">partners</a>
+				<a href="#" class="nav__list_item">about</a>
+				<a href="#" class="nav__list_item">support</a>
+				<a href="#" class="nav__list_item">services</a>
+				<a href="#" class="nav__list_item">contact</a>
+			</div>
+		</div>
+		<div class="footer__media col-md-2 col-lg-2">
+			<div class="feed__title">
+			 	<h4 class="feed__title_news">Sitemap</h4>
+			</div>
+			<div class="media__social">
+				<div class="social__top">
+					<a href="#" class="social__link"><img src="img/social/twitter.svg" alt="" class="social__link_img"></a>
+					<a href="#" class="social__link"><img src="img/social/facebook.svg" alt="" class="social__link_img"></a>
+					<a href="#" class="social__link"><img src="img/social/google+.svg" alt="" class="social__link_img"></a>
+				</div>
+				<div class="social__bottom">
+					<a href="#" class="social__link"><img src="img/social/vimeo.svg" alt="" class="social__link_img"></a>
+					<a href="#" class="social__link"><img src="img/social/youtube.svg" alt="" class="social__link_img"></a>
+					<a href="#" class="social__link"><img src="img/social/flickr.svg" alt="" class="social__link_img"></a>
+					<a href="#" class="social__link"><img src="img/social/instagram.svg" alt="" class="social__link_img"></a>
+					<a href="#" class="social__link"><img src="img/social/rss.svg" alt="" class="social__link_img"></a>
+				</div>			
+			</div>
 		</div>
 	</footer>
 </div>
