--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
 <body>
 <div class="container-fluid">
 	<header class="header row">
-		<div class="header__logo col-lg-6 start-lg col-md-6 start-md col-xs-6 start-xs">
+		<div class="header__logo col-sm-6 center-sm col-lg-6 start-lg col-md-6 start-md col-xs-12 start-xs">
 			<h1 class="logo__title"><a href="#" class="logo__title_link">writesquad</a></h1>
 			<div class="logo__square"></div>
 		</div>
-		<form action="#" class="header__search col-xs-6 end-xs col-lg-6 end-lg col-md-6 end-md" method="get">
+		<form action="#" class="header__search col-xs-12 center-xs col-sm-6 end-sm col-lg-6 end-lg col-md-6 end-md" method="get">
 				<input type="text" class="search__text" placeholder="Search">
 				<button type="submit" class="search__submit">GO</button>
 		</form>
 	</header>
 	<nav class="nav row">
-		<ul class="nav__list col-md-12">
-			<li class="list__item"><a href="#" class="list__item_link">home</a></li>
+		<button class="nav__button col-xs-12 center-xs" type="button">Menu</button>
+		<ul class="nav__list col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<li class="list__item list__item_active"><a href="#" class="list__item_link">home</a></li>
 			<li class="list__item"><a href="#" class="list__item_link">about us</a></li>
 			<li class="list__item"><a href="#" class="list__item_link">services</a></li>
 			<li class="list__item"><a href="#" class="list__item_link">partners</a></li>
@@ -38,7 +39,7 @@
 	</nav>
 
 	<div class="main__news row">
-		<div class="slider col-lg-12 ">
+		<div class="slider col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div class="slider__polosa" id="polosa">
 
 				<div class="polosa__news">
@@ -76,7 +77,7 @@
 			</div>
 		</div>
 
-		<div class="slider__banner col-lg-12 col-md-12" id="slider__nav">
+		<div class="slider__banner col-xs-12 col-sm-12 col-md-12 col-lg-12" id="slider__nav">
 			<div class="banner__nav">
 				<div class="nav__number">
 					<span class="number__article number__article_blue">1</span>
@@ -113,7 +114,7 @@
 	</div>	
 
 		<div class="content row">
-		<div class="content__about col-lg-6 col-md-12">
+		<div class="content__about col-xs-12 col-sm-12 col-md-12 col-lg-6">
 			<div class="about__title">
 				<h1 class="title__name">ABOUT WHITESQUAD</h1>
 				<div class="title__line"></div>
@@ -131,7 +132,7 @@
 
 
 
-		<div class="content__about col-lg-6 col-md-12">
+		<div class="content__about col-xs-12 col-sm-12 col-md-12 col-lg-6">
 			<div class="about__title">
 				<h1 class="title__name">a word from OUR ceo</h1>
 				<div class="title__line"></div>
@@ -149,7 +150,7 @@
 	</div>
 
 	<div class="content__additional row">
-		<div class="content__services col-md-6 col-lg-4">
+		<div class="content__services col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="about__title">
 				<h1 class="title__name">services</h1>
 				<div class="title__line"></div>
@@ -160,7 +161,7 @@
 			</div>
 		</div>
 		
-		<div class="content__teams col-md-6 col-lg-4">
+		<div class="content__teams col-xs-12 col-sm-12 col-md-4 col-lg-4">
 			<div class="about__title teams__title">
 				<h1 class="title__name">Our team</h1>
 				<div class="title__line"></div>
@@ -198,7 +199,7 @@
 			</div>
 		</div>
 
-		<div class="content__services content__support col-md-6 col-lg-4">
+		<div class="content__services content__support col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="about__title teams__title">
 				<h1 class="title__name">27/7/365 support</h1>
 				<div class="title__line"></div>
@@ -210,7 +211,7 @@
 		</div>
 
 
-		<div class="clients__title col-md-6 col-lg-12">
+		<div class="clients__title col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div class="about__title teams__title">
 				<h1 class="title__name">our clients</h1>
 				<div class="title__line"></div>
@@ -258,14 +259,14 @@
 
 
 	<footer class="footer row">
-		<div class="footer__feed col-lg-4 col-md-4">
+		<div class="footer__feed col-xs-12 col-sm-4 col-lg-4 col-md-4">
 			 <div class="feed__title">
 			 	<h4 class="feed__title_news">twitter feed</h4>
 			 </div>
 			 <span class="feed__data">23 oct</span>
 			 <p class="feed__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur esse ex aliquam nisi officia, veniam voluptatum rerum illum dignissimos vel. Lorem ipsum.</p>
 		</div>
-		<div class="footer__nav col-md-2 col-lg-2">
+		<div class="footer__nav col-xs-12 col-sm-2 col-md-2 col-lg-2">
 			<div class="feed__title">
 			 	<h4 class="feed__title_news">Sitemap</h4>
 			</div>
@@ -278,9 +279,9 @@
 				<a href="#" class="nav__list_item">contact</a>
 			</div>
 		</div>
-		<div class="footer__media col-md-2 col-lg-2">
+		<div class="footer__media col-xs-12 col-sm-4 col-md-3 col-lg-2">
 			<div class="feed__title">
-			 	<h4 class="feed__title_news">Sitemap</h4>
+			 	<h4 class="feed__title_news">Social Networks</h4>
 			</div>
 			<div class="media__social">
 				<div class="social__top">
@@ -296,6 +297,15 @@
 					<a href="#" class="social__link"><img src="img/social/rss.svg" alt="" class="social__link_img"></a>
 				</div>			
 			</div>
+		</div>
+		<div class="footer__logo col-xs-12 col-sm-4 col-md-5 col-lg-4">
+			<div class="footer__logo_main">
+				<h1 class="logo__title"><a href="#" class="logo__title_link">writesquad</a></h1>
+				<div class="logo__square"></div>
+			</div>
+			<p class="footer__logo_add">
+				Copyright © 2012 Whitesquare. A <a href="#" class="logo__add_link">pcklab</a> creation
+			</p>
 		</div>
 	</footer>
 </div>
