--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,38 @@
 				<p class="article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum praesentium aperiam ex tempora, eius, voluptates sequi consequuntur unde quasi voluptatum fugit! Delectus, optio saepe ea id voluptatum similique ullam esse obcaecati eligendi eveniet porro dolores quos corrupti veniam, minima animi quod maiores distinctio quae pariatur? Excepturi fugiat deleniti quidem quae, iusto eaque velit quam tenetur animi, tempora esse maiores ratione, odio hic sequi nobis magni officiis veniam. Itaque illo dolores tempore animi reprehenderit fugit? Numquam temporibus voluptatum facere fugit, veritatis, non maiores reprehenderit ea, unde enim id magnam vitae incidunt laborum, amet? Eligendi aut harum totam vitae et nemo quae.
 				</p>
 			</div>
-
+			<div class="projects__works">
+				<div class="article__title projects__title">
+					<h6 class="title__name title__name_projects">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h6>
+				</div>
+				<div class="works__examples">
+					<div class="examples__item">
+						<a href="img/1.jpg" data-fancybox="gallery-1" data-fancybox="group-1" class="item__gallery"><img src="img/1.jpg" alt="" class="gallery__pic">
+						<span class="item__add">Related project</span>
+						</a>
+					</div>
+					<div class="examples__item">
+						<a href="img/1.jpg" data-fancybox="gallery-1" data-fancybox="group-1" class="item__gallery"><img src="img/1.jpg" alt="" class="gallery__pic">
+						<span class="item__add">Related project</span>
+						</a>
+					</div>
+					<div class="examples__item">
+						<a href="img/1.jpg" data-fancybox="gallery-1" data-fancybox="group-1" class="item__gallery"><img src="img/1.jpg" alt="" class="gallery__pic">
+						<span class="item__add">Related project</span>
+						</a>
+					</div>
+					<div class="examples__item">
+						<a href="img/1.jpg" data-fancybox="gallery-1" data-fancybox="group-1" class="item__gallery"><img src="img/1.jpg" alt="" class="gallery__pic">
+						<span class="item__add">Related project</span>
+						</a>
+					</div>
+					<div class="examples__item">
+						<a href="img/1.jpg" data-fancybox="gallery-1" data-fancybox="group-1" class="item__gallery"><img src="img/1.jpg" alt="" class="gallery__pic">
+						<span class="item__add">Related project</span>
+						</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 
